# coinbase-q3-forecast-bounty

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: q1_2025.json  q2_2025.json  q3_2025.json  sentiment_config.json
model/: create_forecast.py
reports/: backtests.md
scripts/: backtest_q2.py  build_sentiment_factor.py  enhanced_sentiment.py  q3_forecast.py  subscriptions_model.py
scripts/utils/: __init__.py
tests/: test_backtests.py
