[project]
name = "coinbase-bounty"
version = "0.1.0"
description = "Q3'25 Coinbase revenue forecast with ex-ante S&S model and sentiment factor"
requires-python = ">=3.9"

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
